--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
              <img
                   src="assets/img/home/undraw_moments_0y20.svg"
                   alt="Image"
-                  class="img-fluid"
+                  class="img-fluid svg"
               />
             </div>
             <div class="col-12 col-sm-12 col-md-4">
              <img
                   src="assets/img/home/undraw_audio_player_re_cl20.svg"
                   alt="Image"
-                  class="img-fluid"
+                  class="img-fluid svg"
               />
             </div>
           </div>
