--- a/works.html
+++ b/works.html
@@ -212,7 +212,7 @@
             </div>
 
             <div class="item alimentos col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+              <a href="ambiente.html" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Medio Ambiente</h3>
                 </div>
